--- a/index.html
+++ b/index.html
@@ -132,7 +132,11 @@
     <section class="section-box" id="about" aria-labelledby="about-heading">
         <h2 id="about-heading">About Me</h2>
         <p>
-            Welcome to my official website! I am Kingsley Koech, a passionate web developer and mentor dedicated to empowering underserved communities through technology, education, and mentorship. My mission is to create opportunities, inspire growth, and contribute to sustainable development in my country and beyond.
+            I am Kingsley Koech, a professional at the dynamic intersection of cybersecurity, software development, and Linux. My journey began with a deep curiosity for how systems work, which quickly evolved into a passion for making them secure.
+
+Based in Nairobi, I am driven by the belief that a strong foundation in technology is key to a thriving digital future. I specialize in designing and building infrastructure solutions that are not only efficient and reliable but also inherently secure from the ground up.
+
+As I pursue a course in Software Engineering, I am focused on bridging the gap between development and security, empowering organizations to confidently navigate the complex digital landscape."
         </p>
     </section>
 
