--- a/index.html
+++ b/index.html
@@ -132,11 +132,8 @@
     <section class="section-box" id="about" aria-labelledby="about-heading">
         <h2 id="about-heading">About Me</h2>
         <p>
-            I am Kingsley Koech, a professional at the dynamic intersection of cybersecurity, software development, and Linux. My journey began with a deep curiosity for how systems work, which quickly evolved into a passion for making them secure.
+Kingsley Kipkoech is an aspiring cybersecurity professional and software engineer driven by a passion for architecting and securing technology infrastructure. As a dedicated student, he is committed to leveraging his expertise to empower organizations to thrive in a resilient digital world. One of his proudest achievements is creating a Python-based script that automated a critical data backup process, reducing manual effort by over 80%. Additionally, he successfully designed and implemented a secure user authentication system for a group project, which passed all security audits with zero vulnerabilities. He is building on these successes by focusing on Linux-based system security and network defense to further his career goals.
 
-Based in Nairobi, I am driven by the belief that a strong foundation in technology is key to a thriving digital future. I specialize in designing and building infrastructure solutions that are not only efficient and reliable but also inherently secure from the ground up.
-
-As I pursue a course in Software Engineering, I am focused on bridging the gap between development and security, empowering organizations to confidently navigate the complex digital landscape."
         </p>
     </section>
 
