--- a/index.html
+++ b/index.html
@@ -132,13 +132,12 @@
     <section class="section-box" id="about" aria-labelledby="about-heading">
         <h2 id="about-heading">About Me</h2>
         <p>
-Kingsley Kipkoech is an aspiring cybersecurity professional and software engineer driven by a passion for architecting and securing technology infrastructure. As a dedicated student, he is committed to leveraging his expertise to empower organizations to thrive in a resilient digital world. One of his proudest achievements is creating a Python-based script that automated a critical data backup process, reducing manual effort by over 80%. Additionally, he successfully designed and implemented a secure user authentication system for a group project, which passed all security audits with zero vulnerabilities. He is building on these successes by focusing on Linux-based system security and network defense to further his career goals.
-
+            Kingsley Kipkoech is an aspiring cybersecurity professional and software engineer driven by a passion for architecting and securing technology infrastructure. As a dedicated student, he is committed to leveraging his expertise to empower organizations to thrive in a resilient digital world. One of his proudest achievements is creating a Python-based script that automated a critical data backup process, reducing manual effort by over 80%. Additionally, he successfully designed and implemented a secure user authentication system for a group project, which passed all security audits with zero vulnerabilities. He is building on these successes by focusing on Linux-based system security and network defense to further his career goals.
         </p>
     </section>
 
     <!-- Skills Section -->
-    <section class="section-box hidden-section" id="skills" aria-labelledby="skills-heading">
+    <section class="section-box" id="skills" aria-labelledby="skills-heading">
         <h2 id="skills-heading">My Skills</h2>
         <ul>
             <li>Learn HTML</li>
