--- a/index.html
+++ b/index.html
@@ -140,54 +140,15 @@
     <section class="section-box" id="skills" aria-labelledby="skills-heading">
         <h2 id="skills-heading">My Skills</h2>
         <ul>
-            <li>Learn HTML</li>
-            <li>Practice CSS</li>
-            <li>Explore JavaScript</li>
-            <li>Build Projects</li>
-            <li>Contribute to Open Source</li>
-            <li>Join Developer Communities</li>
-            <li>Stay Updated with Trends</li>
-            <li>Network with Professionals</li>
-            <li>Seek Mentorship</li>
-            <li>Share Knowledge</li>
-            <li>Keep Learning</li>
-            <li>Have Fun!</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Linux-based CLI</li>
+            <li>ms Office tools</li>
+            <li>Empathetic reasoning</li>
+            <li>Problem solving</li>
+            <li>Teamwork</li>
         </ul>
-        <table>
-            <tr>
-                <th>Skill</th>
-                <th>Level</th>
-                <th>Experience</th>
-            </tr>
-            <tr>
-                <td>HTML</td>
-                <td>Beginner</td>
-                <td>1 month</td>
-            </tr>
-            <tr>
-                <td>CSS</td>
-                <td>Beginner</td>
-                <td>1 month</td>
-            </tr>
-        </table>
-        <h3>Skill Progress</h3>
-        <p>My current skill levels in HTML and CSS:</p>
-        <div style="max-width:400px;margin:auto;">
-            <label for="html-progress">HTML</label>
-            <progress id="html-progress" value="50" max="100"></progress>
-            <span>50%</span>
-            <br>
-            <label for="js-progress">JavaScript</label>
-            <progress id="js-progress" value="30" max="100"></progress>
-            <span>30%</span>
-            <br>
-            <label for="css-progress">CSS</label>
-            <progress id="css-progress" value="20" max="100"></progress>
-            <span>20%</span>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
+       <!-- Contact Section -->
     <section class="section-box hidden-section" id="contact" aria-labelledby="contact-heading">
         <h2 id="contact-heading">Contact Me</h2>
         <p>Email: <a href="mailto:kingsleykoech@gmail.com">kingsleykoech@gmail.com</a></p>
