--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <li>Teamwork</li>
         </ul>
        <!-- Contact Section -->
-    <section class="section-box hidden-section" id="contact" aria-labelledby="contact-heading">
+    <section class="section-box" id="contact" aria-labelledby="contact-heading">
         <h2 id="contact-heading">Contact Me</h2>
         <p>Email: <a href="mailto:kingsleykoech@gmail.com">kingsleykoech@gmail.com</a></p>
         <p>Phone: <a href="tel:+254701498294">+254 701498294</a></p>
@@ -157,7 +157,7 @@
     </section>
 
     <!-- Gallery Section -->
-    <section class="section-box hidden-section" id="gallery" aria-labelledby="gallery-heading">
+    <section class="section-box" id="gallery" aria-labelledby="gallery-heading">
         <h2 id="gallery-heading">Gallery</h2>
         <img src="x.jpeg" alt="A description of my photo" width="300">
         <img src="nature.jpeg" alt="A description of my photo" width="300">
