--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             <li>Problem solving</li>
             <li>Teamwork</li>
         </ul>
+    </section>
        <!-- Contact Section -->
     <section class="section-box" id="contact" aria-labelledby="contact-heading">
         <h2 id="contact-heading">Contact Me</h2>
