--- a/index.html
+++ b/index.html
@@ -149,6 +149,31 @@
             <li>Teamwork</li>
         </ul>
     </section>
+   <!-- Portfolio Section -->
+<section class="section-box" id="portfolio" aria-labelledby="portfolio-heading">
+    <h2 id="portfolio-heading">My Projects</h2>
+    <div class="projects-grid">
+        <article class="project-card">
+            <h3>Secure Linux Hardening Script</h3>
+            <p>An automated Bash script that applies essential security best practices to a new Linux server, ensuring a strong foundation against common threats. This project reduced manual configuration time by 75%.</p>
+            <div class="technologies"><span>Bash</span><span>Linux</span><span>Security Automation</span></div>
+            <a href="https://github.com/kingsleykoech/your-linux-script-repo" target="_blank" rel="noopener" class="project-link">View Project <i class="fab fa-github"></i></a>
+        </article>
+        <article class="project-card">
+            <h3>Infrastructure as Code with Terraform</h3>
+            <p>A modular Terraform project that provisions a highly available and secure web server infrastructure on AWS, demonstrating expertise in repeatable, secure cloud deployments.</p>
+            <div class="technologies"><span>Terraform</span><span>AWS</span><span>IaC</span><span>Cloud Security</span></div>
+            <a href="https://github.com/kingsleykoech/your-terraform-repo" target="_blank" rel="noopener" class="project-link">View Project <i class="fab fa-github"></i></a>
+        </article>
+        <article class="project-card">
+            <h3>Python Vulnerability Scanner</h3>
+            <p>A lightweight Python tool that scans websites for common vulnerabilities like SQL injection and XSS, providing an accessible solution for small businesses to identify risks early.</p>
+            <div class="technologies"><span>Python</span><span>Web Security</span><span>Vulnerability Analysis</span></div>
+            <a href="https://github.com/kingsleykoech/your-python-scanner-repo" target="_blank" rel="noopener" class="project-link">View Project <i class="fab fa-github"></i></a>
+        </article>
+    </div>
+</section>
+    
        <!-- Contact Section -->
     <section class="section-box" id="contact" aria-labelledby="contact-heading">
         <h2 id="contact-heading">Contact Me</h2>
