--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             position: relative;
         }
         .close-btn {
+
             position: absolute;
             top: 12px;
             right: 18px;
@@ -324,6 +325,7 @@
     <nav aria-label="Main Navigation">
         <span class="hamburger" id="hamburger" tabindex="0" aria-label="Open navigation menu" aria-controls="navLinks" aria-expanded="false">&#9776;</span>
         <div class="nav-links" id="navLinks">
+            <a href="#elevator-pitch">Home</a> <!-- This is the new Home button -->
             <a href="#elevator-pitch">My Pitch</a>
             <a href="#about">About Me</a>
             <a href="#skills">Skills</a>
