--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     <nav aria-label="Main Navigation">
         <span class="hamburger" id="hamburger" tabindex="0" aria-label="Open navigation menu" aria-controls="navLinks" aria-expanded="false">&#9776;</span>
         <div class="nav-links" id="navLinks">
-            <a href="#elevator-pitch">Home</a> <!-- This is the new Home button -->
+            <a href="#">Home</a> <!-- Updated to go to the very top of the page -->
             <a href="#elevator-pitch">My Pitch</a>
             <a href="#about">About Me</a>
             <a href="#skills">Skills</a>
@@ -373,8 +373,7 @@
             <div class="skill-item">
                 <i class="fas fa-paint-brush"></i> <span>CSS</span>
             </div>
-            <div class="skill-item">
-                <i class="fab fa-linux"></i> <span>Linux-based CLI</span>
+            <div class="fab fa-linux"></i> <span>Linux-based CLI</span>
             </div>
             <div class="skill-item">
                 <i class="fas fa-file-excel"></i> <span>MS Office Tools</span>
