--- a/index.html
+++ b/index.html
@@ -103,30 +103,15 @@
             <!-- You can re-add your skill progress bars and table here if desired -->
         </section>
 
-        <!-- Portfolio Section - Now with THREE flip card projects -->
+        <!-- Portfolio Section - Now with TWO flip card projects -->
         <section class="section-box" id="portfolio" aria-labelledby="portfolio-heading">
             <h2 id="portfolio-heading">My Projects</h2>
             <div class="projects-grid">
-                <!-- Project 1: Secure Linux Hardening Script -->
-                <article class="flip-card" aria-labelledby="project1-title">
-                    <div class="flip-card-inner">
-                        <div class="flip-card-front">
-                            <div class="project-image-background" style="background-image: url('https://placehold.co/300x200/4CAF50/FFFFFF?text=Linux+Script');"></div>
-                            <h3 id="project1-title">Secure Linux Hardening Script</h3>
-                        </div>
-                        <div class="flip-card-back">
-                            <p id="project1-desc">An automated Bash script that applies essential security best practices to a new Linux server, ensuring a strong foundation against common threats. This project reduced manual configuration time by 75%.</p>
-                            <div class="technologies"><span>Bash</span><span>Linux</span><span>Security Automation</span></div>
-                            <a href="https://github.com/kingsleykoech/your-linux-script-repo" target="_blank" rel="noopener noreferrer" class="project-link" aria-label="View Secure Linux Hardening Script on GitHub">View Project <i class="fab fa-github" aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                </article>
-
                 <!-- Project 2: Help Ubuntu Users Website -->
-                <article class="flip-card" aria-labelledby="project2-title">
+                <article class="flip-card ubuntu-site-card" aria-labelledby="project2-title">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <div class="project-image-background" style="background-image: url('https://placehold.co/300x200/2A7AE2/FFFFFF?text=Ubuntu+Help+Site');"></div>
+                            <div class="project-image-background"></div>
                             <h3 id="project2-title">Ubuntu Network Manager Guide</h3>
                         </div>
                         <div class="flip-card-back">
@@ -138,10 +123,10 @@
                 </article>
 
                 <!-- Project 3: Community Technology Education -->
-                <article class="flip-card" aria-labelledby="project3-title">
+                <article class="flip-card community-project-card" aria-labelledby="project3-title">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <div class="project-image-background" style="background-image: url('https://placehold.co/300x200/FFB347/222222?text=Community+Project');"></div>
+                            <div class="project-image-background"></div>
                             <h3 id="project3-title">Community Tech Education</h3>
                         </div>
                         <div class="flip-card-back">
