--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
                         <div class="flip-card-back">
                             <p id="project2-desc">A website built to guide Ubuntu users through manual installation and troubleshooting steps for Network Manager issues, helping them regain network access effectively.</p>
                             <div class="technologies"><span>HTML</span><span>CSS</span><span>Linux</span><span>Troubleshooting</span></div>
-                            <a href="https://github.com/kingsleykoech/your-ubuntu-website-repo" target="_blank" rel="noopener noreferrer" class="project-link" aria-label="View Ubuntu Network Manager Guide on GitHub">View Project <i class="fab fa-github" aria-hidden="true"></i></a>
+                            <!-- Removed href and class="project-link" attributes from this <a> tag -->
+                            <a>View Project <i class="fab fa-github" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </article>
