--- a/index.html
+++ b/index.html
@@ -118,7 +118,6 @@
                             <p id="project2-desc">A website built to guide Ubuntu users through manual installation and troubleshooting steps for Network Manager issues, helping them regain network access effectively.</p>
                             <div class="technologies"><span>HTML</span><span>CSS</span><span>Linux</span><span>Troubleshooting</span></div>
                             <!-- Removed href and class="project-link" attributes from this <a> tag -->
-                            <a>View Project <i class="fab fa-github" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </article>
@@ -133,7 +132,7 @@
                         <div class="flip-card-back">
                             <p id="project3-desc">Participated in a community project focused on educating students about various aspects of technology, fostering digital literacy and inspiring future tech enthusiasts.</p>
                             <div class="technologies"><span>Community Engagement</span><span>Education</span><span>Tech Literacy</span><span>Mentorship</span></div>
-                            <a href="https://github.com/kingsleykoech/your-community-project-repo" target="_blank" rel="noopener noreferrer" class="project-link" aria-label="View Community Tech Education Project on GitHub">View Project <i class="fab fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/kingsleykoech/your-community-project-repo" target="_blank" rel="noopener noreferrer" class="project-link" 
                         </div>
                     </div>
                 </article>
