--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
                 To leverage my passion for cybersecurity, software development, and Linux to architect and secure robust technology infrastructure solutions, empowering organizations to thrive in a resilient digital world.
             </p>
             <div class="video-placeholder" aria-label="Placeholder for your pitch video">
-                <img src="https://placehold.co/560x315/333/64FFDA?text=Your+Pitch+Video+Here" alt="Placeholder for pitch video">
-                <button class="play-button" aria-label="Play video">►</button>
+                <img src="video palceholder" alt="Placeholder for pitch video">
             </div>
             <a href="#portfolio" class="cta-button">Explore My Work</a>
         </section>
