--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kingsley Koech | Aspiring Cybersecurity & Software Engineer</title>
+    <title>Kingsley Kipkoech | Aspiring Cybersecurity & Software Engineer</title>
     
     <!-- Professional Meta Tags for SEO and Social Sharing -->
     <meta name="description" content="Kingsley Koech's professional portfolio, showcasing expertise in cybersecurity, software development, and Linux-based infrastructure solutions.">
