--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     
     <!-- Professional Meta Tags for SEO and Social Sharing -->
     <meta name="description" content="Kingsley Koech's professional portfolio, showcasing expertise in cybersecurity, software development, and Linux-based infrastructure solutions.">
-    <meta name="keywords" content="Kingsley Koech, cybersecurity, software engineer, Linux, security automation, Terraform, AWS, Python, portfolio, web developer">
+    <meta name="keywords" content="Kingsley Koech, ASpiring cybersecurity, software engineer, Linux, security automation, Terraform, AWS, Python, portfolio, web developer">
     <meta name="author" content="Kingsley Koech">
-    <meta property="og:title" content="Kingsley Koech | Cybersecurity & Software Engineer">
+    <meta property="og:title" content="Kingsley Kipkoech | Cybersecurity & Software Engineer">
     <meta property="og:description" content="Kingsley Koech's professional portfolio, showcasing expertise in cybersecurity, software development, and Linux-based infrastructure solutions.">
     <meta property="og:image" content="https://murray-1.github.io/My--website/me.jpeg"> <!-- Ensure this path is correct on your live site -->
     <meta property="og:url" content="https://murray-1.github.io/My--website/">
